<resources>
    <string name="app_name">Trash Plus</string>
    <string name="information_about_user">Information about user:</string>
    <string name="user_info">User info:</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="birth_date">Birth date</string>
    <string name="info">Info:</string>
    <string name="sign_in">    Sign In</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="scanner">Scanner</string>
    <string name="home">Home</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="person">Person</string>
    <string name="scan">Scan</string>
    <string name="short_product_info">Short product info</string>
    <string name="my_profile">My profile</string>
    <string name="my_products">My products</string>
    <string name="profile">Profile</string>
    <string name="product_name">Product name</string>
    <string name="barcode">Barcode:</string>
    <string name="incorrect_qr">Этот продукт не найден в нашей базе данных</string>
    <string name="ok">OK</string>
    <string name="recycling">Информация о переработке упаковки</string>
    <string name="researching_product_hint">Информация о продукте</string>
</resources>