<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ellipse_for_login_and_registration"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dl_login_head"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <View
        android:id="@+id/view"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:background="@drawable/pre_logo_white"
        app:layout_constraintEnd_toEndOf="@id/dl_login_right"
        app:layout_constraintStart_toStartOf="@id/dl_login_left"
        app:layout_constraintTop_toTopOf="@+id/dl_login_head" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dl_login_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dl_login_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dl_login_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tv_login_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/dl_login_top"
        app:layout_constraintEnd_toEndOf="@id/dl_login_right"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.015"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@+id/dl_login_top"
        app:layout_constraintHorizontal_bias="0.1"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@id/tv_login_sign_in"
        />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/enter_email"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintEnd_toEndOf="@id/dl_login_right"
        app:layout_constraintStart_toStartOf="@id/dl_login_left"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@id/et_login_email"
        />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edit_text"
        android:hint="@string/enter_password"
        android:textColor="@color/black"
        android:padding="7dp"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dl_login_right"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@color/hint_color"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/dl_login_right"
        app:layout_constraintTop_toBottomOf="@id/et_login_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login_sign_in"
        android:layout_width="0dp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dl_login_right"
        app:layout_constraintStart_toStartOf="@+id/dl_login_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dl_login_for_dont_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hint_color"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/bt_login_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintStart_toStartOf="@id/dl_login_for_dont_account" />

    <TextView
        android:id="@+id/btn_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/main_green"
        app:layout_constraintStart_toEndOf="@id/tv_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toBottomOf="@id/bt_login_sign_in"
        />

</androidx.constraintlayout.widget.ConstraintLayout>